packages/forge-dsl/fixtures/errors/e01-unknown-divert.fable
// expect: FORGE202
-> beginning

=== beginning ===
The trail forks ominously.
-> beginnning
